gtk+3.0 (3.1.90-0ubuntu1) UNRELEASED; urgency=low

  * New upstream bug fix release.
  * Add 000git_updates_since_3.1.90.patch: Upstream changes since 3.1.90, to
    get as close to 3.1.91 as we can:
    - 3 small bug fixes.
    - 4 translation updates.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Sep 2011 05:43:45 +0200

gtk+3.0 (3.1.18-0ubuntu3) oneiric; urgency=low

  * debian/patches/111_no_offscreen_device_grabs.patch: Do not allow 
    widgets in an offscreen hiearchy to make grabs. Required to fix 
    LP: #804009. Thanks Robert Carr

 -- Didier Roche <didrocks@ubuntu.com>  Mon, 12 Sep 2011 17:33:08 +0200

gtk+3.0 (3.1.18-0ubuntu2) oneiric; urgency=low

  * Add 101_gdkenumtypes.c_location.patch: Always generate gdk/gdkenumtypes.c
    in the source tree, and fix path in the introspection sources. With this,
    gdkenumtypes.c is correctly included with separate build trees, too. This
    fixes missing GTypes in the .gir when using a separate build tree.
    (LP: #769256)
  * Ship pregenerated documentation from upstream tarball again:
    - debian/rules: Drop --enable-gtk-doc again.
    - debian/control.in: Move gtk-doc-tools back to B-D-I.
    - debian/libgtk-3-doc.install.in, debian/libgail-3-doc.install: Update
      origins to install from source tree.
    - (LP: #842543)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Sep 2011 12:45:18 +0200

gtk+3.0 (3.1.18-0ubuntu1) oneiric; urgency=low

  * New upstream release.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 06 Sep 2011 09:21:59 +0200

gtk+3.0 (3.1.16-0ubuntu2) oneiric; urgency=low

  * debian/control.in: Move gtk-doc-tools from B-D-I to B-D, to avoid having
    to add a dynamic "i386 or not" check to debian/rules.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Sep 2011 13:39:09 +0200

gtk+3.0 (3.1.16-0ubuntu1) oneiric; urgency=low

  * New upstream release.
  * Port debian/patches/043_ubuntu_menu_proxy.patch for new upstream version.
  * Unfuzz patches.